glx/testdata/valid/person-complete.glx
persons:
  person-abcdef12:
    properties:
      primary_name: "John Smith"
      gender: "male"
      living: false
      birth_date: "1850-01-15"
      death_date: "1920-06-20"
    notes: "Complete person record with all optional fields"
    tags:
      - "ancestor"
      - "smith-family"
