glx/testdata/invalid/broken-references/persons/person-john-smith.glx
persons:
  person-john-smith-1850:
    properties:
      name:
        value: "John Smith"
        fields:
          given: "John"
          surname: "Smith"
      gender: "male"
    notes: "Blacksmith in Leeds, Yorkshire. Married Mary Brown in 1875."
    tags:
      - "ancestor"
      - "smith-family"
